# latticecli

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/claude_clone/: __main__.py  main.py
src/claude_clone/adapters/: __init__.py
src/claude_clone/adapters/api/: __init__.py
src/claude_clone/adapters/api/mcp/: __init__.py  resources.py  tools.py
src/claude_clone/adapters/messaging/: __init__.py  event_bus.py
src/claude_clone/adapters/persistence/: __init__.py
src/claude_clone/adapters/persistence/in_memory/: __init__.py  approval_repository.py  event_repository.py  run_repository.py
src/claude_clone/adapters/persistence/sqlite/: __init__.py  run_repository.py
src/claude_clone/agent/: __init__.py  graph.py  llm.py
src/claude_clone/agent/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  schemas.py
src/claude_clone/application/: __init__.py
src/claude_clone/application/interfaces/: __init__.py  approval_repository.py  event_publisher.py  event_repository.py  run_repository.py
src/claude_clone/application/use_cases/: __init__.py  create_run.py  get_timeline.py  resolve_approval.py
src/claude_clone/backends/: __init__.py  file_checkpoint.py  simple_config.py
src/claude_clone/cli/: __init__.py  app.py
src/claude_clone/core/: __init__.py  permission.py
src/claude_clone/domain/: __init__.py  exceptions.py
src/claude_clone/domain/entities/: __init__.py  approval.py  event.py  run.py  task.py
src/claude_clone/infrastructure/: __init__.py  container.py  database.py  mcp_server.py
src/claude_clone/interfaces/: __init__.py  checkpoint_manager.py  config_loader.py  grep_backend.py
src/claude_clone/prompts/: __init__.py  system.py
src/claude_clone/repl/: __init__.py  input.py  loop.py  output.py
src/claude_clone/state/: __init__.py  store.py  thin.py  types.py
tests/test_adapters/: test_event_bus.py  test_in_memory_repositories.py
tests/test_agent/: test_graph.py  test_llm.py
tests/test_application/: test_create_run.py  test_get_timeline.py  test_resolve_approval.py
tests/test_backends/: test_file_checkpoint.py  test_simple_config.py
tests/test_cli/: __init__.py  test_app.py
tests/test_core/: test_permission.py
tests/test_domain/: test_approval.py  test_event.py  test_run.py  test_task.py
tests/test_infrastructure/: test_container.py
tests/test_prompts/: __init__.py  test_system.py
tests/test_repl/: __init__.py  test_input.py  test_output.py
tests/test_state/: __init__.py  test_thin_state.py
tests/test_tools/: __init__.py  test_bash.py  test_edit.py  test_glob.py  test_grep.py  test_read.py
