[project]
name = "claude-clone"
version = "0.1.0"
description = "A CLI-based AI coding assistant inspired by Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "정보찬" }
]
keywords = ["cli", "ai", "coding-assistant", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # AI Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",  # Gemini 지원

    # CLI / UI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",

    # Data Validation
    "pydantic>=2.0.0",

    # Config
    # tomllib은 Python 3.11+ 내장
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
    "pre-commit>=3.6.0",
]

# 추가 LLM 백엔드 (나중에 설치)
anthropic = [
    "langchain-anthropic>=0.2.0",
]
openai = [
    "langchain-openai>=0.2.0",
]
ollama = [
    "langchain-ollama>=0.2.0",
]
all-llm = [
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
]

[project.scripts]
claude-clone = "claude_clone.main:main"

[project.urls]
Homepage = "https://github.com/user/claude-clone"
Documentation = "https://github.com/user/claude-clone#readme"
Repository = "https://github.com/user/claude-clone.git"
Issues = "https://github.com/user/claude-clone/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_clone"]

# Ruff 설정 (린터 + 포매터)
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (Typer uses this)
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["claude_clone"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# mypy 설정
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_google_genai.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
    "langchain_ollama.*",
]
ignore_missing_imports = true

# pytest 설정
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
asyncio_mode = "auto"

# coverage 설정
[tool.coverage.run]
source = ["src/claude_clone"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
